Archive2/41/6bef176089e15a/output
main.cpp:8:18: error: no matching function for call to 'addressof'
    std::cout << std::addressof(Foo(5));
                 ^~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/move.h:135:5: note: candidate function [with _Tp = Foo] not viable: expects an l-value for 1st argument
    addressof(_Tp& __r) noexcept
    ^
1 error generated.
